
- added a bunch of new docstrings to the Jinja classes. Makes fun now to
  use pydoc :-)

- fixed severe memcaching bug. Formerly it wasn't possible to use memcaching
  without enabling disk cache.

- fixed a bug that allowed users to override the special names `_`, `true` etc.

- added `batch` and `slice` filters for batching or slicing sequences

- added `sum`, `abs` and `round` filters. This fixes #238

- added `striptags` and `xmlattr` filters for easier SGML/XML processing

- the trans tag does not need explicit naming for variables with the same
  name any more. You can now use ``{% trans foo %}`` instead of the verbose
  version ``{% trans foo=foo %}``.

- reimplemented Buffet plugin so that it works at least for pylons

- added `Environment.get_translations_for_string`

- fixed a bug in the parser that didn't unescape keyword arguments. (thanks
  to Alexey Melchakov for reporting)

- You can now use the environment to just tokenize a template. This can
  be useful for syntax highlighting or other purposes.

- added optional C-implementation of the context baseclass.

- you can now use optional parentheses around macro defintions. Thus it's
  possible to write ``{% macro foo(a, b, c) %}`` instead of ``{% macro
  foo a, b, c %}``.

- additional macro arguments now end up in `varargs`.

- implemented the `{% call %}` block. `call` and `endcall` can still be used
  as identifiers until Jinja 1.3

- it's not possible to stream templates.

- fixed a corner case when defining a block inside of a condition

- the cached loader mixin is now able to cache multiple templates from
  different loaders in the same cache folder.

- Translatable strings returned by ``_()`` will leave their string formatting
  signs untouched. Thanks to Stefan Ebner for reporting.

- ``{% block name "data" %}`` is now an alias for
  ``{% block name %}data{% endblock %}``. Note that the second argument can
  be an expression. As soon as you specify an expression as second argument