@@ -174,6 +174,15 @@ available per default:
 
     *new in Jinja 1.1*
 
+`rendertemplate`
+
+    Loads and renders a template with a copy of the current context. This works
+    in many situations like the ``{% include %}`` tag, just that it does not
+    include a template and merges it into the template structure but renders
+    it completely independent and returns the rendered data as string.
+
+    *new in Jinja 1.1*
+
 
 Global Constants
 ================
